// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Object Marker Clickable Object Marker 1`] = `
<section>
  

  <a
    class="fd-object-marker fd-object-marker--link"
  >
    <i
      class="sap-icon--private fd-object-marker__icon"
    />
    Locked
  </a>
  

  <a
    class="fd-object-marker fd-object-marker--link"
  >
    <i
      class="sap-icon--user-edit fd-object-marker__icon"
    />
    Unsaved Changes
  </a>
  


  <div
    dir="rtl"
  >
    

    <h4>
      RTL Support
    </h4>
    

    <a
      class="fd-object-marker fd-object-marker--link"
    >
      <i
        class="sap-icon--private fd-object-marker__icon"
      />
      Locked
    </a>
    

    <a
      class="fd-object-marker fd-object-marker--link"
    >
      <i
        class="sap-icon--user-edit fd-object-marker__icon"
      />
      Unsaved Changes
    </a>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Object Marker Icon And Text 1`] = `
<section>
  

  <span
    class="fd-object-marker"
  >
    <i
      class="sap-icon--request fd-object-marker__icon"
    />
    Request
  </span>
  

  <span
    class="fd-object-marker"
  >
    <i
      class="sap-icon--favorite fd-object-marker__icon"
    />
    Favourite
  </span>
  

  <span
    class="fd-object-marker"
  >
    <i
      class="sap-icon--flag fd-object-marker__icon"
    />
    Flag
  </span>
  

  <span
    class="fd-object-marker"
  >
    <i
      class="sap-icon--user-edit fd-object-marker__icon"
    />
    Draft
  </span>
  

  <span
    class="fd-object-marker "
  >
    <i
      class="sap-icon--private fd-object-marker__icon"
    />
    Locked
  </span>
  


  <div
    dir="rtl"
  >
    

    <h4>
      RTL Support
    </h4>
    

    <span
      class="fd-object-marker"
    >
      <i
        class="sap-icon--request fd-object-marker__icon"
      />
      Request
    </span>
    

    <span
      class="fd-object-marker"
    >
      <i
        class="sap-icon--favorite fd-object-marker__icon"
      />
      Favourite
    </span>
    

    <span
      class="fd-object-marker"
    >
      <i
        class="sap-icon--flag fd-object-marker__icon"
      />
      Flag
    </span>
    

    <span
      class="fd-object-marker"
    >
      <i
        class="sap-icon--user-edit fd-object-marker__icon"
      />
      Draft
    </span>
    

    <span
      class="fd-object-marker "
    >
      <i
        class="sap-icon--private fd-object-marker__icon"
      />
      Locked
    </span>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Object Marker Icon Only 1`] = `
<section>
  

  <span
    aria-label="icon for request"
    class="fd-object-marker"
  >
    <i
      class="sap-icon--request fd-object-marker__icon"
    />
  </span>
  

  <span
    aria-label="icon for favourite"
    class="fd-object-marker"
  >
    <i
      class="sap-icon--favorite fd-object-marker__icon"
    />
  </span>
  

  <span
    aria-label="icon for flag"
    class="fd-object-marker"
  >
    <i
      class="sap-icon--flag fd-object-marker__icon"
    />
  </span>
  

  <span
    aria-label="icon for user edit"
    class="fd-object-marker"
  >
    <i
      class="sap-icon--user-edit fd-object-marker__icon"
    />
  </span>
  

  <span
    aria-label="icon for private"
    class="fd-object-marker"
  >
    <i
      class="sap-icon--private fd-object-marker__icon"
    />
  </span>
  

</section>
`;

exports[`Storyshots Components/Object Marker Marker Text 1`] = `
<section>
  

  <span
    class="fd-object-marker"
  >
    Draft
  </span>
  

  <span
    class="fd-object-marker"
  >
    Locked
  </span>
  

</section>
`;
